--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "lucide": "^0.475.0",
     "lucide-react": "^0.476.0",
     "motion": "^12.6.2",
-    "next": "^15.2.4",
+    "next": "15.3.6",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.2",
+    "react-dom": "19.1.2",
     "react-hook-form": "^7.54.2",
     "react-scroll-sync": "^0.11.2",
     "recharts": "^2.15.1",
